--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
+    <link rel="stylesheet" href="./style.css">
+    <style>
+      body {background:#00b3e6;}
+    div {
+      width:700px;
+      margin:auto; 
+      font-family: 'Helvetica Neue';
+      background: white;
+      padding: 30px
+    }
+    </style>
   </head>
 
   <body>
-
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
